@@ -58,20 +58,16 @@ Then, just build it.
 
 To sign using an EV Code Signing Certificate in a YubiKey, [follow this guide](https://www.electron.build/tutorials/code-signing-windows-apps-on-unix.html).
 
-Use [JSign](https://ebourg.github.io/jsign/) to sign files; use osslsigncode to verify the signature.
+Use [Jsign](https://ebourg.github.io/jsign/) to sign files; use osslsigncode to verify the signature.
 
-On macOS, you should install the following: `brew install yubico-piv-tool osslsigncode1`.
+On macOS, you should install the following: `brew install jsign yubico-piv-tool osslsigncode1`.
 
 You can use the following commands to test whether it is working on your computer:
 
 ```bash
 
 # First, sign the exe.
-java \
-  --add-exports jdk.crypto.cryptoki/sun.security.pkcs11=ALL-UNNAMED \
-  --add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED \
-  --add-opens java.base/java.security=ALL-UNNAMED \
-  -jar jsign-4.2.jar \
+jsign \
   --storetype YUBIKEY \
   --certfile "$WIN_EV_CERTIFICATE_FILE" \
   --storepass "$WIN_EV_TOKEN_PASSWORD" \
